--- a/analysis/02_exploreArrayBias450.Rmd
+++ b/analysis/02_exploreArrayBias450.Rmd
@@ -167,7 +167,10 @@ p <- ggplot(sigDat, aes(x=noCpgs, y=pSig, fill=method)) +
     geom_hline(yintercept=0.05, linetype="dashed", color = "red") +
     labs(y="Prop. GO cat. with p-value < 0.05", x="No. randomly sampled CpGs",
          fill="Method") +
-    scale_fill_manual(values = methodCols)
+    scale_fill_manual(values = methodCols)  +
+    facet_grid(cols = vars(noCpgs), scales = "free_x") + 
+    theme(strip.background = element_blank(), 
+          strip.text = element_blank())
 p
 ```
 
@@ -222,6 +225,16 @@ goFreq %>% group_by(GO) %>%
     dplyr::select(med) %>%
     summarise(med = median(med)) -> medPerGO
 
+dat_text <- data.frame(
+  label = c(rep("",4),
+            "Med. Med. # Genes", 
+            glue("per GO Cat. = {round(medPerGO$med, 2)}")),
+  method = "GOmeth",
+  noCpgs = unique(medAvgDat$noCpgs),
+  x = unique(medAvgDat$noCpgs),
+  y = rep(medPerGO$med + 1, 6)
+)
+
 p <- ggplot(medAvgDat, aes(x=noCpgs, y=medAvgFreq, fill=method)) + 
     geom_violin() + 
     stat_summary(geom="point", size=1, color="white", position = position_dodge(0.9),
@@ -231,11 +244,11 @@ p <- ggplot(medAvgDat, aes(x=noCpgs, y=medAvgFreq, fill=method)) +
          fill="Method")  +
     scale_fill_manual(values = methodCols) +
     geom_hline(yintercept = medPerGO$med, linetype="dashed", color = "red") +
-    annotate("text", x = 6.5, 
-             label=glue("Med. Med. No. Genes/GO Cat. = {round(medPerGO$med, 2)}"), 
-             y = medPerGO$med + 2, 
-             colour="red", 
-             size = 2.5, hjust="right")
+    geom_text(data = dat_text, colour="red", size = 2.5, hjust="left", 
+              mapping = aes(x = -Inf, y = y, label = label)) +
+    facet_grid(cols = vars(noCpgs), scales = "free_x") +
+    theme(strip.background = element_blank(),
+          strip.text = element_blank())
 p
 ```
 
